update API test
