# src/controllers/auth.ts
@@ -1,17 +1,46 @@
-import { Get, Route } from "tsoa";
+import { AuthResponse, RegisterParams, User } from "../models/auth";
+import {
+  Get,
+  Route,
+  Post,
+  Body,
+  Controller,
+  SuccessResponse,
+  Path,
+  Query,
+} from "tsoa";
 
 @Route("auth")
-export default class AuthController {
+export default class AuthController extends Controller {
+  @SuccessResponse("201", "Created") // Custom success response
+  @Post("/register")
+  public async postRegister(
+    @Body() requestBody: RegisterParams
+  ): Promise<AuthResponse> {
+    this.setStatus(201);
+    return {
+      message: "Register success",
+      ...requestBody,
+    };
+  }
+
   @Get("/login")
-  public async getMessage(): Promise<any> {
+  public async getMessage2(): Promise<AuthResponse> {
     return {
       message: "login",
     };
   }
-  @Get("/register")
-  public async getMessage2(): Promise<any> {
+
+  @SuccessResponse("200", "Get Success")
+  @Get("{userId}")
+  public async getUser(
+    @Path() userId: string,
+    @Query() address?: string
+  ): Promise<User> {
+    this.setStatus(200);
     return {
-      message: "register",
+      address,
+      userName: userId,
     };
   }
 }
