# src/routes/auth.route.ts
@@ -1,17 +1,34 @@
 import AuthController from "@/controllers/auth";
-import express from "express";
+import { RegisterParams } from "@/models/auth";
+import express, { Request } from "express";
 
 export const authRouter = express.Router();
 
+authRouter.post(
+  "/auth/register",
+  async (_req: Request<RegisterParams>, res) => {
+    const controller = new AuthController();
+
+    const infoRegister: RegisterParams = {
+      address: _req.body.address,
+      userName: _req.body.userName,
+    };
+
+    const response = await controller.postRegister(infoRegister);
+    return res.send(response);
+  }
+);
+
 authRouter.get("/auth/login", async (_req, res) => {
   const controller = new AuthController();
-  const response = await controller.getMessage();
+  const response = await controller.getMessage2();
   return res.send(response);
 });
 
-authRouter.get("/auth/register", async (_req, res) => {
+authRouter.get("/auth/:userId", async (req: Request, res) => {
   const controller = new AuthController();
-  const response = await controller.getMessage2();
+  const userId = req.params.userId;
+  const response = await controller.getUser(userId, req.body.address);
   return res.send(response);
 });
 // export default router;
